--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "react-portfolio",
+    "name": "nishantaMishra.github.io",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -21,7 +21,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "predeploy": "yarn build && cp build/index.html build/404.html",
+	"predeploy": "npm run build",
         "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
@@ -41,5 +41,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "gh-pages": "^6.3.0"
     }
 }
