--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "react-router-dom": "^6.6.2",
         "react-scripts": "^5.0.1",
         "react-transition-group": "^4.4.2",
+        "three": "^0.175.0",
         "typewriter-effect": "^2.18.2",
         "web-vitals": "^3.1.1"
     },
@@ -21,7 +22,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-	"predeploy": "npm run build",
+        "predeploy": "npm run build",
         "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
